Update index.html and cleanup

--- a/index.html
+++ b/index.html
@@ -1,24 +1,35 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rooted — Wellness Blog</title>
-    <meta name="description" content="Evidence-based wellness blog covering nutrition, yoga, routines, and mental wellness." />
-    <meta name="author" content="Rooted" />
 
-    <meta property="og:title" content="Rooted — Wellness Blog" />
-    <meta property="og:description" content="Evidence-based wellness blog covering nutrition, yoga, routines, and mental wellness." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pure Rooted — Wellness Blog</title>
+  <meta name="description"
+    content="Evidence-based wellness blog covering nutrition, yoga, routines, and mental wellness." />
+  <meta name="author" content="Rooted" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="Rooted — Wellness Blog" />
+  <meta property="og:description"
+    content="Evidence-based wellness blog covering nutrition, yoga, routines, and mental wellness." />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta property="og:type" content="website" />
+
+  <meta property="og:image" content="/favicon.ico" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <meta name="twitter:image" content="/favicon.ico" />
+
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+  <script src="https://pl28696715.effectivegatecpm.com/3d/8a/c5/3d8ac58806fc914a281e6b879fa0ee88.js"></script>
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
