--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script src="https://pl28697163.effectivegatecpm.com/87/05/2a/87052ab474d10ad922ae3aa47eb2dbf2.js"></script>
 </body>
 
 </html>
