Add SCript In HTML

--- a/index.html
+++ b/index.html
@@ -28,9 +28,26 @@
 </head>
 
 <body>
+
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
   <script src="https://pl28697163.effectivegatecpm.com/87/05/2a/87052ab474d10ad922ae3aa47eb2dbf2.js"></script>
+
+  <script>
+    atOptions = {
+      'key': '5fe65c8e48c337ef328b3dbfb8197ab4',
+      'format': 'iframe',
+      'height': 600,
+      'width': 160,
+      'params': {}
+    };
+  </script>
+  <script src="https://www.highperformanceformat.com/5fe65c8e48c337ef328b3dbfb8197ab4/invoke.js"></script>
+
+  <script async="async" data-cfasync="false"
+    src="https://pl28739636.effectivegatecpm.com/e5776743d10efa6e6aaf137a6f7fe456/invoke.js"></script>
+  <div id="container-e5776743d10efa6e6aaf137a6f7fe456"></div>
+
 </body>
 
 </html>
