Add Right Side Ad

--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
       src="https://www.highperformanceformat.com/5fe65c8e48c337ef328b3dbfb8197ab4/invoke.js"></script>
   </div>
 
+  <div class="side-ad ad-right">
+    <script type="text/javascript">
+      atOptions = {
+        'key': '5fe65c8e48c337ef328b3dbfb8197ab4',
+        'format': 'iframe',
+        'height': 600,
+        'width': 160,
+        'params': {}
+      };
+    </script>
+    <script type="text/javascript"
+      src="https://www.highperformanceformat.com/5fe65c8e48c337ef328b3dbfb8197ab4/invoke.js"></script>
+  </div>
+
 
   <script async="async" data-cfasync="false"
     src="https://pl28739636.effectivegatecpm.com/e5776743d10efa6e6aaf137a6f7fe456/invoke.js"></script>
